--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
 	},
 	"devDependencies": {
 		"@types/fs-extra": "^8.0.1",
+		"@types/js-base64": "^2.3.1",
 		"@types/node": "^6.0.40",
 		"@types/vscode": "^1.39.0",
 		"tslint": "^5.16.0",
@@ -71,6 +72,7 @@
 	},
 	"dependencies": {
 		"@octokit/rest": "^16.35.2",
-		"fs-extra": "^8.1.0"
+		"fs-extra": "^8.1.0",
+		"js-base64": "^2.5.1"
 	}
 }
