--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
 		"remark-stringify": "^7.0.4",
 		"unified": "^8.4.2",
 		"unist-util-find": "^1.0.1",
-		"unist-util-find-after": "^2.0.4"
+		"unist-util-find-after": "^2.0.4",
+		"unist-util-visit-all-after": "^1.0.0"
 	}
 }
