--- a/package.json
+++ b/package.json
@@ -69,6 +69,10 @@
     "watch": "tsc -watch -p ./"
   },
   "devDependencies": {
+    "@types/babel-traverse": "^6.25.5",
+    "@types/babel-types": "^7.0.7",
+    "@types/babel__core": "^7.1.3",
+    "@types/babel__traverse": "^7.0.8",
     "@types/fs-extra": "^8.0.1",
     "@types/js-base64": "^2.3.1",
     "@types/node": "^13.1.1",
@@ -77,6 +81,12 @@
     "typescript": "^3.5.1"
   },
   "dependencies": {
+    "@babel/core": "^7.7.7",
+    "@babel/helper-module-imports": "^7.7.4",
+    "@babel/parser": "^7.7.7",
+    "@babel/plugin-proposal-object-rest-spread": "^7.7.7",
+    "@babel/traverse": "^7.7.4",
+    "@babel/types": "^7.7.4",
     "@octokit/rest": "^16.35.2",
     "decamelize": "^3.2.0",
     "fs-extra": "^8.1.0",
