--- a/package.json
+++ b/package.json
@@ -66,7 +66,8 @@
     "vscode:prepublish": "npm run compile",
     "compile": "tsc -p ./",
     "lint": "tslint -p ./",
-    "watch": "tsc -watch -p ./"
+    "watch": "tsc -watch -p ./",
+    "build-json": "ts-node ./src/composeDoc.ts"
   },
   "devDependencies": {
     "@types/babel-traverse": "^6.25.5",
@@ -77,6 +78,7 @@
     "@types/js-base64": "^2.3.1",
     "@types/node": "^13.1.1",
     "@types/vscode": "^1.39.0",
+    "ts-node": "^8.5.4",
     "tslint": "^5.16.0",
     "typescript": "^3.5.1"
   },
