feat: add hover for component for nav to documentation

--- a/package.json
+++ b/package.json
@@ -95,6 +95,7 @@
     "js-base64": "^2.5.1",
     "remark-parse": "^7.0.2",
     "remark-stringify": "^7.0.4",
+    "tiny-invariant": "^1.0.6",
     "unified": "^8.4.2",
     "unist-util-find": "^1.0.1",
     "unist-util-find-after": "^2.0.4",
