--- a/package.json
+++ b/package.json
@@ -30,19 +30,10 @@
     },
     "commands": [
       {
-        "command": "editor.printReferences",
-        "title": "Show All References"
+        "command": "editor.antdHeroReplace",
+        "title": "[antd hero internal] replace string"
       }
     ],
-    "menus": {
-      "editor/context": [
-        {
-          "command": "editor.printReferences",
-          "when": "editorHasReferenceProvider",
-          "group": "navigation@1.31"
-        }
-      ]
-    },
     "languages": [
       {
         "id": "locations",
