--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     },
     "commands": [
       {
-        "command": "editor.antdHeroDeletePrefix",
+        "command": "editor.antdHeroAfterCompletion",
         "title": "[antd hero internal] replace string"
       }
     ],
@@ -90,6 +90,7 @@
     "unified": "^8.4.2",
     "unist-util-find": "^1.0.1",
     "unist-util-find-after": "^2.0.4",
-    "unist-util-visit-all-after": "^1.0.0"
+    "unist-util-visit-all-after": "^1.0.0",
+    "vscode-uri": "^2.1.1"
   }
 }
