feat: show all available props of current component

--- a/.gitignore
+++ b/.gitignore
@@ -3,5 +3,4 @@ node_modules
 src/buildResource/token.ts
 doc-resource
 src/definition.json
-src/definition-en.json
-src/definition-zh.json
+src/raw-table.json
