--- a/package.json
+++ b/package.json
@@ -68,25 +68,13 @@
     "build-json": "ts-node ./src/composeDoc.ts"
   },
   "devDependencies": {
-    "@types/babel-traverse": "^6.25.5",
-    "@types/babel-types": "^7.0.7",
-    "@types/babel__core": "^7.1.3",
-    "@types/babel__traverse": "^7.0.8",
     "@types/fs-extra": "^8.0.1",
     "@types/js-base64": "^2.3.1",
     "@types/node": "^13.1.1",
     "@types/vscode": "^1.39.0",
-    "ts-node": "^8.5.4",
-    "tslint": "^5.16.0",
-    "typescript": "^3.5.1"
+    "ts-node": "^8.5.4"
   },
   "dependencies": {
-    "@babel/core": "^7.7.7",
-    "@babel/helper-module-imports": "^7.7.4",
-    "@babel/parser": "^7.7.7",
-    "@babel/plugin-proposal-object-rest-spread": "^7.7.7",
-    "@babel/traverse": "^7.7.4",
-    "@babel/types": "^7.7.4",
     "@octokit/rest": "^16.35.2",
     "decamelize": "^3.2.0",
     "fs-extra": "^8.1.0",
@@ -94,6 +82,7 @@
     "remark-parse": "^7.0.2",
     "remark-stringify": "^7.0.4",
     "tiny-invariant": "^1.0.6",
+    "typescript": "^3.7.4",
     "unified": "^8.4.2",
     "unist-util-find": "^1.0.1",
     "unist-util-find-after": "^2.0.4",
