--- a/package.json
+++ b/package.json
@@ -88,12 +88,8 @@
     "js-base64": "^2.5.1",
     "remark-parse": "^7.0.2",
     "remark-stringify": "^7.0.4",
-    "tiny-invariant": "^1.0.6",
     "typescript": "^3.7.4",
     "unified": "^8.4.2",
-    "unist-util-find": "^1.0.1",
-    "unist-util-find-after": "^2.0.4",
-    "unist-util-visit-all-after": "^1.0.0",
-    "vscode-uri": "^2.1.1"
+    "unist-util-find": "^1.0.1"
   }
 }
