--- a/package.json
+++ b/package.json
@@ -69,27 +69,36 @@
   },
   "scripts": {
     "vscode:prepublish": "npm run compile",
-    "compile": "tsc -p ./",
-    "lint": "tslint -p ./",
-    "watch": "tsc -watch -p ./",
-    "build-doc": "ts-node ./src/buildResource/index.ts"
+    "compile": "tsc -p ./src",
+    "compile-test": "tsc -p ./test",
+    "lint": "tslint -p ./src",
+    "watch": "tsc -watch -p ./src",
+    "build-doc": "ts-node ./src/buildResource/index.ts",
+    "pretest": "npm run compile-test",
+		"test": "node ./out/test/runTest.js"
   },
   "devDependencies": {
     "@types/fs-extra": "^8.0.1",
+    "@types/glob": "^7.1.1",
     "@types/js-base64": "^2.3.1",
+    "@types/mocha": "^5.2.7",
     "@types/node": "^13.1.1",
     "@types/vscode": "^1.39.0",
+    "glob": "^7.1.6",
     "ts-node": "^8.5.4"
   },
   "dependencies": {
     "@octokit/rest": "^16.35.2",
+    "antd": "^3.26.7",
     "decamelize": "^3.2.0",
     "fs-extra": "^8.1.0",
     "js-base64": "^2.5.1",
+    "mocha": "^7.0.0",
     "remark-parse": "^7.0.2",
     "remark-stringify": "^7.0.4",
     "typescript": "^3.7.4",
     "unified": "^8.4.2",
-    "unist-util-find": "^1.0.1"
+    "unist-util-find": "^1.0.1",
+    "vscode-test": "^1.3.0"
   }
 }
