--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,15 +1,5 @@
 {
-  "compilerOptions": {
-    "module": "commonjs",
-    "target": "es6",
-    "outDir": "out",
-    "lib": ["es2015", "es2016", "es2017", "es2018"],
-    "sourceMap": true,
-    "strict": true,
-    "rootDir": "src",
-    "allowSyntheticDefaultImports": true,
-    "esModuleInterop": true,
-    "resolveJsonModule": true
-  },
+  "files": [],
+  "references": [{ "path": "src" }, { "path": "test" }],
   "exclude": ["node_modules"]
 }
