test: run through test case

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -21,7 +21,7 @@
         "--extensionDevelopmentPath=${workspaceFolder}",
         "--extensionTestsPath=${workspaceFolder}/out-test/suite/index"
       ],
-      "outFiles": ["${workspaceFolder}/out-test/test/**/*.js"],
+      "outFiles": ["${workspaceFolder}/out-test/**/*.js"],
       "preLaunchTask": "npm: watch"
     }
   ]
