--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "compile-test": "tsc -p ./test",
     "lint": "tslint -p ./src",
     "watch": "tsc -watch -p ./src",
+    "watch-test": "tsc -watch -p ./test",
     "build-doc": "ts-node ./src/buildResource/index.ts",
     "pretest": "npm run compile-test",
 		"test": "node ./out/test/runTest.js"
