--- a/package.json
+++ b/package.json
@@ -76,7 +76,7 @@
     "watch-test": "tsc -watch -p ./test",
     "build-doc": "ts-node ./src/buildResource/index.ts",
     "pretest": "npm run compile-test",
-		"test": "node ./out/test/runTest.js"
+    "test": "node ./out/test/runTest.js"
   },
   "devDependencies": {
     "@types/fs-extra": "^8.0.1",
@@ -100,6 +100,8 @@
     "typescript": "^3.7.4",
     "unified": "^8.4.2",
     "unist-util-find": "^1.0.1",
-    "vscode-test": "^1.3.0"
+    "vscode-languageserver": "^6.1.0",
+    "vscode-test": "^1.3.0",
+    "vscode-uri": "^2.1.1"
   }
 }
