--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -1,25 +1,32 @@
-name: Node CI
+name: Node CI (extension)
 
-on: [push]
+on: [push, pull_request]
 
 jobs:
   build:
-    runs-on: macos-latest
+    runs-on: ubuntu-latest
 
     strategy:
       matrix:
         node-version: [10.16]
 
     steps:
-      - uses: actions/checkout@master
+      - uses: actions/checkout@v1
       - name: Use Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@master
+        uses: actions/setup-node@v1
         with:
           node-version: ${{ matrix.node-version }}
-      - name: npm install, build, and test
+
+      - name: Start xvfb
+        run: /usr/bin/Xvfb :99 -screen 0 1024x768x24 > /dev/null 2>&1 &
+
+      - name: npm install and test
         run: |
-          yarn install
-          yarn run compile && yarn run compile-test
-          yarn test
+          npm ci
+          npm run compile
+          npm run compile-test
+          npm test
         env:
           CI: true
+          CODE_VERSION: ''
+          DISPLAY: ':99.0'
