--- a/package.json
+++ b/package.json
@@ -84,6 +84,7 @@
     "@types/js-base64": "^2.3.1",
     "@types/mocha": "^5.2.7",
     "@types/node": "^13.1.1",
+    "@types/react": "^16.9.19",
     "@types/vscode": "^1.39.0",
     "glob": "^7.1.6",
     "ts-node": "^8.5.4"
