--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -1,10 +1,10 @@
 name: Node CI (extension)
 
-on: [push, pull_request]
+on: [push]
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: macOS-10.14
 
     strategy:
       matrix:
@@ -17,9 +17,6 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
 
-      - name: Start xvfb
-        run: /usr/bin/Xvfb :99 -screen 0 1024x768x24 > /dev/null 2>&1 &
-
       - name: npm install and test
         run: |
           npm ci
@@ -28,5 +25,3 @@ jobs:
           npm test
         env:
           CI: true
-          CODE_VERSION: ''
-          DISPLAY: ':99.0'
