--- a/package.json
+++ b/package.json
@@ -18,14 +18,14 @@
   "categories": [
     "Other"
   ],
-  "icon": "assets/icon.png",
+  "icon": "assets/logo.png",
   "activationEvents": [
     "onLanguage:javascript",
     "onLanguage:javascriptreact",
     "onLanguage:typescript",
     "onLanguage:typescriptreact"
   ],
-  "main": "./out/extension.js",
+  "main": "./dist/extension.js",
   "contributes": {
     "capabilities": {
       "hoverProvider": "true"
@@ -69,7 +69,9 @@
     }
   },
   "scripts": {
-    "vscode:prepublish": "npm run compile",
+    "webpack-build": "webpack --mode production",
+    "vscode:prepublish": "npm run webpack-build",
+    "clean": "rm -rf ./node_modules",
     "compile": "tsc -p ./src",
     "compile-test": "tsc -p ./test",
     "lint": "tslint -p ./src",
@@ -80,6 +82,7 @@
     "test": "node ./out-test/runTest.js"
   },
   "devDependencies": {
+    "@octokit/rest": "^16.35.2",
     "@types/fs-extra": "^8.0.1",
     "@types/glob": "^7.1.1",
     "@types/js-base64": "^2.3.1",
@@ -87,23 +90,26 @@
     "@types/node": "^13.1.1",
     "@types/react": "^16.9.19",
     "@types/vscode": "^1.39.0",
-    "glob": "^7.1.6",
-    "ts-node": "^8.5.4"
-  },
-  "dependencies": {
-    "@octokit/rest": "^16.35.2",
     "antd": "^3.26.7",
-    "decamelize": "^3.2.0",
     "fs-extra": "^8.1.0",
+    "glob": "^7.1.6",
     "js-base64": "^2.5.1",
     "mocha": "^7.0.0",
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0",
+    "ts-loader": "^6.2.1",
+    "ts-node": "^8.5.4",
+    "unified": "^8.4.2",
+    "unist-util-find": "^1.0.1",
+    "vscode-test": "^1.3.0",
+    "webpack": "^4.41.5",
+    "webpack-cli": "^3.3.10"
+  },
+  "dependencies": {
+    "decamelize": "^3.2.0",
     "remark-parse": "^7.0.2",
     "remark-stringify": "^7.0.4",
     "typescript": "^3.7.4",
-    "unified": "^8.4.2",
-    "unist-util-find": "^1.0.1",
-    "vscode-languageserver": "^6.1.0",
-    "vscode-test": "^1.3.0",
-    "vscode-uri": "^2.1.1"
+    "vscode-languageserver": "^6.1.0"
   }
 }
