--- a/tsconfig.options.json
+++ b/tsconfig.options.json
@@ -1,6 +1,7 @@
 {
   "compilerOptions": {
     "module": "commonjs",
+    "moduleResolution": "node",
     "target": "es6",
     "lib": ["es2015", "es2016", "es2017", "es2018"],
     "sourceMap": true,
