--- a/package.json
+++ b/package.json
@@ -22,10 +22,9 @@
   "activationEvents": [
     "onLanguage:javascript",
     "onLanguage:javascriptreact",
-    "onLanguage:typescript",
     "onLanguage:typescriptreact"
   ],
-  "main": "./dist/extension.js",
+  "main": "./out/extension.js",
   "contributes": {
     "capabilities": {
       "hoverProvider": "true"
@@ -71,7 +70,6 @@
   "scripts": {
     "webpack-build": "webpack --mode production",
     "vscode:prepublish": "npm run webpack-build",
-    "clean": "rm -rf ./node_modules",
     "compile": "tsc -p ./src",
     "compile-test": "tsc -p ./test",
     "lint": "tslint -p ./src",
