--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "onLanguage:javascriptreact",
     "onLanguage:typescriptreact"
   ],
-  "main": "./out/extension.js",
+  "main": "./dist/extension.js",
   "contributes": {
     "capabilities": {
       "hoverProvider": "true"
@@ -68,11 +68,13 @@
     }
   },
   "scripts": {
+    "prewebpack-build": "VSC_BUILDER=wp node ./script/togglePackageJson.js",
     "webpack-build": "webpack --mode production",
     "vscode:prepublish": "npm run webpack-build",
     "compile": "tsc -p ./src",
     "compile-test": "tsc -p ./test",
     "lint": "tslint -p ./src",
+    "prewatch": "VSC_BUILDER=tsc node ./script/togglePackageJson.js",
     "watch": "tsc -watch -p ./src",
     "watch-test": "tsc -watch -p ./test",
     "build-doc": "ts-node ./src/buildResource/index.ts",
@@ -89,6 +91,7 @@
     "@types/react": "^16.9.19",
     "@types/vscode": "^1.39.0",
     "antd": "^3.26.7",
+    "edit-package": "^1.0.3",
     "fs-extra": "^8.1.0",
     "glob": "^7.1.6",
     "js-base64": "^2.5.1",
