--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "vscode-antd-rush",
   "displayName": "Antd Rush",
-  "description": "Rush to Ant Design",
-  "version": "0.0.1",
+  "description": "Rush to Ant Design in VS Code",
+  "version": "1.0.0",
   "publisher": "fi3ework",
-  "typescript-language-features": "vscode.typescript-language-features",
+  "author": "fi3ework",
   "repository": {
     "type": "git",
     "url": "https://github.com/fi3ework/vscode-antd-rush"
@@ -12,19 +12,30 @@
   "bugs": {
     "url": "https://github.com/fi3ework/vscode-antd-rush/issues"
   },
+  "keywords": [
+    "antd",
+    "ant design",
+    "react",
+    "vscode",
+    "vscode-extension"
+  ],
   "engines": {
-    "vscode": "^1.39.0"
+    "vscode": "^1.0.0"
   },
   "categories": [
     "Other"
   ],
   "icon": "assets/logo.png",
+  "galleryBanner": {
+    "color": "#FFF",
+    "theme": "light"
+  },
   "activationEvents": [
     "onLanguage:javascript",
     "onLanguage:javascriptreact",
     "onLanguage:typescriptreact"
   ],
-  "main": "./out/extension.js",
+  "main": "./dist/extension.js",
   "contributes": {
     "capabilities": {
       "hoverProvider": "true"
