--- a/tsconfig.options.json
+++ b/tsconfig.options.json
@@ -3,7 +3,7 @@
     "module": "commonjs",
     "moduleResolution": "node",
     "target": "es6",
-    "lib": ["es2015", "es2016", "es2017", "es2018"],
+    "lib": ["esnext"],
     "sourceMap": true,
     "strict": true,
     "allowSyntheticDefaultImports": true,
