test: update CI

--- a/.vscodeignore
+++ b/.vscodeignore
@@ -2,7 +2,6 @@
 .github/**
 .vscode/**
 .vscode-test/**
-assets/**
 doc-resource/**
 node_modules/**
 out/**
@@ -22,3 +21,4 @@ yarn.lock
 
 # build dist
 **/*.vsix
+**/*.gif
