--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,14 +1,14 @@
-name: Node CI (extension)
+name: Test
 
 on: [push]
 
 jobs:
   build:
-    runs-on: macOS-10.14
-
+    runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        node-version: [10.16]
+        os: [macos-latest, windows-latest]
+        node: [10, 12]
 
     steps:
       - uses: actions/checkout@v1
@@ -16,8 +16,7 @@ jobs:
         uses: actions/setup-node@v1
         with:
           node-version: ${{ matrix.node-version }}
-
-      - name: npm install and test
+      - name: test
         run: |
           yarn
           yarn run compile
