--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "vscode-extension"
   ],
   "engines": {
-    "vscode": "^1.0.0"
+    "vscode": "^1.35.0"
   },
   "categories": [
     "Other"
@@ -35,7 +35,7 @@
     "onLanguage:javascriptreact",
     "onLanguage:typescriptreact"
   ],
-  "main": "./out/extension.js",
+  "main": "./dist/extension.js",
   "contributes": {
     "capabilities": {
       "hoverProvider": "true"
@@ -100,7 +100,7 @@
     "@types/mocha": "^5.2.7",
     "@types/node": "^13.1.1",
     "@types/react": "^16.9.19",
-    "@types/vscode": "^1.39.0",
+    "@types/vscode": "^1.35.0",
     "antd": "^3.26.7",
     "edit-package": "^1.0.3",
     "fs-extra": "^8.1.0",
