docs: polish readme

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -17,6 +17,7 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
       - name: test
+        shell: bash
         run: |
           yarn
           yarn run compile
