docs: update badges

--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "onLanguage:javascriptreact",
     "onLanguage:typescriptreact"
   ],
-  "main": "./out/extension.js",
+  "main": "./dist/extension.js",
   "contributes": {
     "capabilities": {
       "hoverProvider": "true"
