chore: bump antd to 3.26.15, fix dependency versions

--- a/package.json
+++ b/package.json
@@ -102,8 +102,8 @@
     "@types/mocha": "^7.0.1",
     "@types/node": "^13.7.0",
     "@types/react": "^16.9.19",
-    "@types/vscode": "^1.43.0",
-    "antd": "^3.26.7",
+    "@types/vscode": "^1.35.0",
+    "antd": "3.26.15",
     "cross-env": "^7.0.0",
     "edit-package": "^1.0.3",
     "fs-extra": "^8.1.0",
