--- a/package.json
+++ b/package.json
@@ -118,6 +118,7 @@
     "fs-extra": "^8.1.0",
     "glob": "^7.1.6",
     "js-base64": "^2.5.1",
+    "log-symbols": "^3.0.0",
     "mocha": "^7.0.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
