--- a/package.json
+++ b/package.json
@@ -43,7 +43,11 @@
     "commands": [
       {
         "command": "antdRush.afterCompletion",
-        "title": "[antd rush internal] replace string"
+        "title": "AntdRush: [internal, do not use]"
+      },
+      {
+        "command": "antdRush.setWorkspaceAntdMajorVersion",
+        "title": "AntdRush: Set antd version of current workspace"
       }
     ],
     "languages": [
@@ -82,7 +86,7 @@
             "^3",
             "^4"
           ],
-          "description": "Set default major version of antd (3.x or 4.x) of workspace. You can change this for each workspace."
+          "description": "Set default major version of antd (^3 or ^4) of workspace. You can change this for each workspace."
         }
       }
     }
@@ -109,6 +113,7 @@
     "@types/fs-extra": "^8.0.1",
     "@types/glob": "^7.1.1",
     "@types/js-base64": "^2.3.1",
+    "@types/lodash.merge": "^4.6.6",
     "@types/mocha": "^7.0.1",
     "@types/node": "^13.7.0",
     "@types/react": "^16.9.19",
@@ -133,6 +138,7 @@
   },
   "dependencies": {
     "decamelize": "^4.0.0",
+    "lodash.merge": "^4.6.2",
     "remark-parse": "^7.0.2",
     "remark-stringify": "^7.0.4",
     "typescript": "^3.8.3",
