--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "onLanguage:javascriptreact",
     "onLanguage:typescriptreact"
   ],
-  "main": "./out/extension.js",
+  "main": "./dist/extension.js",
   "contributes": {
     "capabilities": {
       "hoverProvider": "true"
@@ -105,7 +105,6 @@
     "prewatch": "npm run toggle-out",
     "watch": "tsc -watch -p ./src",
     "watch-test": "tsc -watch -p ./test",
-    "pretest": "npm run compile-test && npm run toggle-out",
     "test": "node ./out-test/runTest.js"
   },
   "devDependencies": {
