--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -10,6 +10,8 @@ jobs:
       matrix:
         os: [macos-latest, windows-latest]
         node: [10, 12]
+    env:
+      CI: true
     steps:
       - name: Checkout
         uses: actions/checkout@v2
