--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "onLanguage:javascriptreact",
     "onLanguage:typescriptreact"
   ],
-  "main": "./dist/extension.js",
+  "main": "./out/extension.js",
   "contributes": {
     "capabilities": {
       "hoverProvider": "true"
@@ -98,14 +98,14 @@
     "toggle-dist": "cross-env VSC_BUILDER=wp node ./script/togglePackageJson.js",
     "prewebpack-build": "npm run toggle-dist",
     "webpack-build": "webpack --mode production",
-    "vscode:prepublish": "npm run webpack-build",
     "compile": "tsc -p ./src",
     "compile-test": "tsc -p ./test",
     "lint": "tslint -p ./src",
-    "prewatch": "npm run toggle-out",
+    "prewatch": "npm run compile && npm run toggle-out",
     "watch": "tsc -watch -p ./src",
     "watch-test": "tsc -watch -p ./test",
-    "test": "node ./out-test/runTest.js"
+    "test": "node ./out-test/runTest.js",
+    "vscode:prepublish": "y lint && npm run webpack-build"
   },
   "devDependencies": {
     "@octokit/rest": "^17.1.4",
