--- a/package.json
+++ b/package.json
@@ -100,7 +100,7 @@
     "webpack-build": "webpack --mode production",
     "compile": "tsc -p ./src",
     "compile-test": "tsc -p ./test",
-    "lint": "tslint -p ./src",
+    "lint": "eslint \"src/**\" \"test/**\"",
     "prewatch": "npm run compile && npm run toggle-out",
     "watch": "tsc -watch -p ./src",
     "watch-test": "tsc -watch -p ./test",
@@ -117,9 +117,13 @@
     "@types/node": "^13.7.0",
     "@types/react": "^16.9.19",
     "@types/vscode": "^1.35.0",
+    "@typescript-eslint/eslint-plugin": "^2.28.0",
+    "@typescript-eslint/parser": "^2.28.0",
     "antd": "3.26.15",
     "cross-env": "^7.0.0",
     "edit-package": "^1.0.3",
+    "eslint": "^6.8.0",
+    "eslint-config-alloy": "^3.7.1",
     "fs-extra": "^8.1.0",
     "glob": "^7.1.6",
     "js-base64": "^2.5.1",
