--- a/package.json
+++ b/package.json
@@ -105,7 +105,7 @@
     "watch": "tsc -watch -p ./src",
     "watch-test": "tsc -watch -p ./test",
     "test": "node ./out-test/runTest.js",
-    "vscode:prepublish": "y lint && npm run webpack-build"
+    "vscode:prepublish": "npm run lint && npm run webpack-build"
   },
   "devDependencies": {
     "@octokit/rest": "^17.1.4",
@@ -126,7 +126,9 @@
     "eslint-config-alloy": "^3.7.1",
     "fs-extra": "^8.1.0",
     "glob": "^7.1.6",
+    "husky": "^4.2.5",
     "js-base64": "^2.5.1",
+    "lint-staged": "^10.1.6",
     "log-symbols": "^3.0.0",
     "mocha": "^7.0.0",
     "react": "^16.12.0",
@@ -146,5 +148,16 @@
     "remark-stringify": "^7.0.4",
     "typescript": "^3.8.3",
     "vscode-languageserver": "^6.1.0"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "*.ts": [
+      "prettier --write",
+      "lint"
+    ]
   }
 }
