--- a/package.json
+++ b/package.json
@@ -94,38 +94,40 @@
   "scripts": {
     "build-doc:download-and-parse": "cross-env DOWNLOAD=true ts-node ./src/build-resource/index.ts",
     "build-doc:parse": "cross-env DOWNLOAD=true ts-node ./src/build-resource/index.ts",
-    "toggle-out": "cross-env VSC_BUILDER=tsc node ./script/togglePackageJson.js",
-    "toggle-dist": "cross-env VSC_BUILDER=wp node ./script/togglePackageJson.js",
-    "prewebpack-build": "npm run toggle-dist",
-    "webpack-build": "webpack --mode production",
-    "compile": "tsc -p ./src",
+    "build-dev": "cross-env NODE_ENV=development ts-node --files -P ./scripts/tsconfig.json ./scripts",
+    "build-prod": "cross-env NODE_ENV=production ts-node --files -P ./scripts/tsconfig.json ./scripts",
     "compile-test": "tsc -p ./test",
     "lint": "eslint \"src/**\" \"test/**\"",
-    "prewatch": "npm run compile && npm run toggle-out",
-    "watch": "tsc -watch -p ./src",
     "watch-test": "tsc -watch -p ./test",
     "test": "node ./out-test/runTest.js",
     "vscode:prepublish": "npm run lint && npm run webpack-build"
   },
   "devDependencies": {
     "@octokit/rest": "^17.1.4",
+    "@types/friendly-errors-webpack-plugin": "^0.1.2",
     "@types/fs-extra": "^8.0.1",
     "@types/glob": "^7.1.1",
+    "@types/hard-source-webpack-plugin": "^1.0.1",
     "@types/js-base64": "^2.3.1",
     "@types/lodash.merge": "^4.6.6",
     "@types/mocha": "^7.0.1",
     "@types/node": "^13.7.0",
     "@types/react": "^16.9.27",
+    "@types/terser-webpack-plugin": "^2.2.0",
     "@types/vscode": "^1.35.0",
+    "@types/webpack-merge": "^4.1.5",
     "@typescript-eslint/eslint-plugin": "^2.28.0",
     "@typescript-eslint/parser": "^2.28.0",
     "antd": "3.26.15",
+    "clean-webpack-plugin": "^3.0.0",
     "cross-env": "^7.0.0",
     "edit-package": "^1.0.3",
     "eslint": "^6.8.0",
     "eslint-config-alloy": "^3.7.1",
+    "friendly-errors-webpack-plugin": "^1.7.0",
     "fs-extra": "^8.1.0",
     "glob": "^7.1.6",
+    "hard-source-webpack-plugin": "^0.13.1",
     "husky": "^4.2.5",
     "js-base64": "^2.5.1",
     "lint-staged": "^10.1.6",
@@ -139,7 +141,8 @@
     "unist-util-find": "^1.0.1",
     "vscode-test": "^1.3.0",
     "webpack": "^4.43.0",
-    "webpack-cli": "^3.3.11"
+    "webpack-cli": "^3.3.11",
+    "webpack-merge": "^4.2.2"
   },
   "dependencies": {
     "decamelize": "^4.0.0",
